# MagicBot-2B-OFT

./: .gitignore  CITATION.cff  Makefile  README.md  eval_policy.py  pyproject.toml  pyrightconfig.json  requirements.txt
deployment/model_server/: server_policy.py
deployment/model_server/tools/: debug_server_policy.py  image_tools.py  websocket_policy_client.py  websocket_policy_server.py
deployment/upload/: push_model_to_hf.py
examples/Behavior/: adaptive_ensemble.py  custom_argparse.py  model2behavior_interface.py  port_utils.sh  start_behavior_env.py  start_behavior_env.sh  start_client.sh  start_parallel_eval.sh  start_parallel_eval_per_task.sh  start_policy_server.sh  start_server.sh  starvla_cotrain_behavior.yaml  tasks.jsonl
examples/CoTrainVLM/train_files/: run_libero_cotrain.sh  run_train_starvlm.sh  starvla_cotrain_libero.yaml
examples/Franka/eval_files/: inference_dual_example.py  inference_single_example.py  run_policy_server.sh
examples/Franka/train_files/: modality.json  run_franka_train_dual.sh  run_franka_train_single.sh  starvla_cotrain_franka_dual.yaml  starvla_cotrain_franka_single.yaml
examples/LIBERO-plus/eval_files/: aggregate_results.py  eval_libero.py  eval_libero.sh  libero_plus_requirements.txt  model2libero_interface.py  run_policy_server.sh
examples/LIBERO/eval_files/: eval_libero.py  eval_libero.sh  install_libero.sh  model2libero_interface.py  run_policy_server.sh
examples/LIBERO/train_files/: modality.json  run_libero_train.sh  starvla_cotrain_libero.yaml
examples/Robocasa_tabletop/eval_files/: base_config.py  batch_eval_args.sh  model2robocasa_interface.py  simulation_env.py
examples/Robocasa_tabletop/train_files/: download_gr00t_ft_data.py  run_robocasa.sh  starvla_cotrain_robocasa_gr1.yaml  submit_robocasa_training.sh
examples/Robotwin/eval_files/: deploy_policy.yml  eval.sh  eval_robotwin_oft3d_11tasks.sh  model2robotwin_interface.py  requirements.txt  robotwin_oft3d_11tasks.txt  run_policy_server.sh  start_eval.sh  summarize_robotwin_eval.py
examples/Robotwin/train_files/: modality.json  run_robotwin_train.sh  run_robotwin_train_batch.sh  run_robotwin_train_slurm.sh  starvla_cotrain_robotwin.yaml  (+2 more)
examples/VLA-Arena/: data_preparation.sh
scripts/run_scripts/: run_lerobot_datasets_qwenGR00T.sh  run_lerobot_datasets_qwenfast.sh  run_lerobot_datasets_qwenoft.sh  run_lerobot_datasets_qwenpi.sh
starVLA/dataloader/: __init__.py  dataloader_manager.py  lerobot_datasets.py  vlm_datasets.py
starVLA/model/: tools.py
starVLA/training/: train_starvla.py  train_starvla_cotrain.py  train_starvlm.py  train_unified.py
(+134 files in other folders)
